--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,400;0,700;1,400;1,700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -66,5 +68,28 @@
   
   .animate-marquee-reverse {
     animation: marquee-reverse 20s linear infinite;
+  }
+}
+
+@layer components {
+  .font-heading {
+    font-family: 'Cormorant Garamond', serif;
+    font-weight: 700;
+    font-size: 60px;
+    line-height: 1.2;
+  }
+  
+  .font-subheading {
+    font-family: 'Cormorant Garamond', serif;
+    font-weight: 400;
+    font-size: 36px;
+    line-height: 1.3;
+  }
+  
+  .font-body {
+    font-family: 'Lato', sans-serif;
+    font-weight: 400;
+    font-size: 21px;
+    line-height: 1.6;
   }
 }
